# timesheet

./: .gitignore  AGENTS.md  CHANGING_BACKENDPORT.md  FRONTEND_DOCKER_COMPOSE_DEPLOY.md  FRONTEND_GENERIC_DEPLOY.md  INSTALL_IIS_INTRANET.md  README.md  TESTING.md  initial_prompt1.txt  pyrightconfig.json
.playwright-mcp/: page-2026-04-28T19-35-21-842Z.yml  page-2026-04-28T20-03-03-217Z.yml
backend/: .env.example  alembic.ini  cli.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: employee.py  timesheet.py
backend/app/routers/: employees.py  export.py  timesheets.py
backend/app/schemas/: employee.py  timesheet.py
backend/app/services/: export_service.py  timesheet_service.py
backend/migrations/: 001_initial_schema.sql
backend/stubs/: pyodbc.pyi
frontend/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DaySummary.tsx  DescriptionInput.tsx  EmployeeSelector.tsx  ExportPanel.tsx  TimePickerInput.tsx  TimesheetCalendar.tsx  WeekSummary.tsx
frontend/src/hooks/: useEmployees.ts  useTimesheetEntries.ts
frontend/src/pages/: HomePage.tsx
frontend/src/test/: setup.ts
frontend/src/utils/: timeUtils.ts
specification/: add_menu.md  add_project_feature.md
